--- a/sp-config/item-service-dev.yml
+++ b/sp-config/item-service-dev.yml
@@ -7,6 +7,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+  rabbitmq:
+    host: 192.168.41.135
+    port: 15672
+    username: admin
+    password: admin
 ---
 spring:
   profiles: item1
