--- a/sp-config/user-service-dev.yml
+++ b/sp-config/user-service-dev.yml
@@ -5,7 +5,11 @@ sp:
 spring:
   application:
     name: user-service
-    
+  rabbitmq:
+    host: 192.168.41.135
+    port: 15672
+    username: admin
+    password: admin
 server:
   port: 8101
 eureka:
