--- a/sp-config/zuul-dev.yml
+++ b/sp-config/zuul-dev.yml
@@ -10,6 +10,11 @@ spring:
           searchPaths: config
           #username: your-username
           #password: your-password
+  rabbitmq:
+    host: 192.168.41.135
+    port: 15672
+    username: admin
+    password: admin
     
 server:
   port: 6001
@@ -18,3 +23,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
